<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item 
        android:id="@+id/ic_done"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_action_done"
        android:showAsAction="always" 
        android:title="@string/action_done"/>
    
    <item 
        android:id="@+id/ic_map"
        android:orderInCategory="100"
        android:icon="@drawable/ic_map"
        android:showAsAction="always" 
        android:title="@string/action_map"/>
    <item 
        android:id="@+id/ic_compass"
        android:orderInCategory="100"
        android:icon="@drawable/ic_compass"
        android:showAsAction="always" 
        android:title="@string/action_compass"/>

    <item 
        android:id="@+id/ic_camera"
        android:orderInCategory="100"
        android:icon="@drawable/ic_camera"
        android:showAsAction="always" 
        android:title="@string/action_camera"/>

<!--     <item  -->
<!--         android:id="@+id/ic_notes" -->
<!--         android:orderInCategory="100" -->
<!--         android:icon="@drawable/ic_notes" -->
<!--         android:showAsAction="always"  -->
<!--         android:title="@string/action_notes"/> -->

    <item 
        android:id="@+id/ic_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="never" 
        android:title="@string/action_save"/>
    <item 
        android:id="@+id/ic_email"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_mail"
        android:showAsAction="always" 
        android:title="@string/action_mail"/>
	
	<item 
        android:id="@+id/ic_cancel"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_cancel"
        android:showAsAction="always" 
        android:title="@string/action_cancel"/>
    
    <item 
        android:id="@+id/ic_action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always" 
        android:title="@string/action_settings"/>
    
</menu>
