<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <ImageButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="#0000"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_done" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/done"
        android:layout_toRightOf="@+id/done"
        android:background="#0000"
        android:contentDescription="@string/action_cancel"
        android:src="@drawable/ic_cancel" />
    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/compass"
        android:background="#0000"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/ic_main_settings" />

    <ImageButton
        android:id="@+id/perSampleNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/settings"
        android:background="#0000"
        android:contentDescription="@string/notes"
        android:src="@drawable/ic_notes" />

    <ImageButton
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/perSampleNotes"
        android:background="#0000"
        android:contentDescription="@string/action_report"
        android:src="@drawable/ic_compass" />

    <ImageButton
        android:id="@+id/newSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/compass"
        android:background="#0000"
        android:contentDescription="@string/title_activity_new_site"
        android:src="@drawable/ic_camera" />

</RelativeLayout>
