<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/foldTypeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/foldType"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/foldTypeSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/foldTypeTv"
        android:layout_alignLeft="@+id/hingeLineTrendEt"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/hingeLineTrendEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hingeLineTrend"
        android:layout_alignBottom="@+id/hingeLineTrend"
        android:layout_alignLeft="@+id/hingeLinePlungeEt"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/hingeLinePlunge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hingeLineTrendEt"
        android:layout_marginTop="17dp"
        android:text="@string/hingeLinePlunge"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/hingeLineTrend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/foldTypeTv"
        android:layout_marginTop="18dp"
        android:text="@string/hingeLineTrend"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/hingeLinePlungeEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hingeLinePlunge"
        android:layout_toRightOf="@+id/hingeLinePlunge"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/moveMent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hingeLinePlunge"
        android:layout_marginTop="18dp"
        android:text="@string/limbAngle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/limbAngleEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/moveMent"
        android:layout_alignLeft="@+id/hingeLinePlungeEt"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tightNess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/moveMent"
        android:layout_marginTop="15dp"
        android:text="@string/tightNess"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/tightNessSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tightNess"
        android:layout_alignLeft="@+id/limbAngleEt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/hinge"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/hingeSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/hingeLinePlunge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/limbs"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/limbsSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/hingeLinePlunge" />

    <TextView
        android:id="@+id/lambda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:text="@string/lambda"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/lambdaEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/limbsSpn"
        android:layout_toLeftOf="@+id/limbsSpn"
        android:layout_toRightOf="@+id/tightNess"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <Spinner
        android:id="@+id/lambdaUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lambda"
        android:layout_toRightOf="@+id/lambdaEt" />

    <TextView
        android:id="@+id/amplitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lambda"
        android:layout_marginTop="16dp"
        android:text="@string/amplitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/amplitudeEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lambdaUnits"
        android:layout_toLeftOf="@+id/lambdaUnits"
        android:layout_toRightOf="@+id/amplitude"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/ampUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lambdaUnits"
        android:layout_alignBottom="@+id/amplitudeEt"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/secondOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/amplitude"
        android:layout_below="@+id/amplitude"
        android:layout_marginTop="14dp"
        android:text="@string/secondOrder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/secondOrderSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/secondOrder"
        android:layout_alignLeft="@+id/ampUnits" />

    <TextView
        android:id="@+id/symmetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/secondOrder"
        android:layout_below="@+id/secondOrder"
        android:text="@string/symmetry"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/symmetrySpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/symmetry"
        android:layout_alignLeft="@+id/secondOrderSpn" />

    <ImageButton
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/symmetry"
        android:layout_alignParentBottom="true"
        android:background="#0000"
        android:contentDescription="@string/done"
        android:src="@drawable/ic_done" />

</RelativeLayout>
